# sdlttt

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  notes.txt
cmake/: FindSDL2.cmake
res/backgrounds/: background.ai
res/boards/: board.ai  connect.ai  green_speed_cloth_square.psd
res/pieces/: ex.ai
resources/pieces/: oh.ai
src/: SDLTest.cpp  bondiGame.cpp  bondiGameInterface.h  connect.cpp  connect.h  go.cpp  go.h  othello.cpp  othello.h  pente.cpp  pente.h  res_path.h  sdlttt.cpp  ttt.cpp  ttt.h  tttModel.cpp  tttModel.h  tttStatus.cpp  tttStatus.h
